force-app/main/default/objects/IT_Welfare_Project__c/IT_Welfare_Project__c.object-meta.xml
<CustomObject>
    <label>Welfare Project</label>
    <nameField>
        <label>Welfare Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Welfare Project</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>