force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Account__c.field-meta.xml
<CustomField>
    <fullName>IT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Welfare Project</relationshipLabel>
    <relationshipName>Welfare_Project</relationshipName>
    <type>Lookup</type>
</CustomField>