force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>IT_Acquisition_Channel__c</fullName>
    <label>Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edenred</fullName>
                <default>true</default>
                <label>Edenred</label>
            </value>
            <value>
                <fullName>Marsh</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>