force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Activation_Phase__c.field-meta.xml
<CustomField>
    <fullName>IT_Activation_Phase__c</fullName>
    <label>Activation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkout Date Request</fullName>
            </value>
            <value>
                <fullName>Activation kit preparation</fullName>
            </value>
            <value>
                <fullName>Activation kit verification</fullName>
            </value>
            <value>
                <fullName>Plan configuration</fullName>
            </value>
            <value>
                <fullName>Test before Go Live</fullName>
            </value>
            <value>
                <fullName>Live Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>