force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Average_Age__c.field-meta.xml
<CustomField>
    <fullName>IT_Average_Age__c</fullName>
    <label>Average Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 30 years old</fullName>
            </value>
            <value>
                <fullName>between 30 years old and 40 years old</fullName>
            </value>
            <value>
                <fullName>between 40 years old and 50 years old</fullName>
            </value>
            <value>
                <fullName>&gt; 50 years old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>