force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Beneficiaries_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Beneficiaries_Number__c</fullName>
    <label>Beneficiaries Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>