force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Benefit__c.field-meta.xml
<CustomField>
    <fullName>IT_Benefit__c</fullName>
    <label>Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Macro_Benefit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Fees</fullName>
            </value>
            <value>
                <fullName>School Fees</fullName>
            </value>
            <value>
                <fullName>Family Care</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Paper Top Premium</fullName>
            </value>
            <value>
                <fullName>Printable Top Premium</fullName>
            </value>
            <value>
                <fullName>Paper Selection</fullName>
            </value>
            <value>
                <fullName>Printable Selection</fullName>
            </value>
            <value>
                <fullName>Ticket Welfare - Packages (Portale Beneficiari)</fullName>
            </value>
            <value>
                <fullName>Ticket Welfare - Integrated (Portale Titolari)</fullName>
            </value>
            <value>
                <fullName>Ticket Transport (ATM)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Monetization</fullName>
            </value>
            <value>
                <fullName>Online Purchases (NO Amazon)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>