force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Benefit_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Benefit_End_Date__c</fullName>
    <label>Benefit End Date</label>
    <type>Date</type>
</CustomField>