force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_BillingStreetNumber_form__c.field-meta.xml
<CustomField>
    <fullName>IT_BillingStreetNumber_form__c</fullName>
    <label>Billing Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>