force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Brochure__c.field-meta.xml
<CustomField>
    <fullName>IT_Brochure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochure</label>
    <type>Checkbox</type>
</CustomField>