force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_CdC_Center_of_Cost__c.field-meta.xml
<CustomField>
    <fullName>IT_CdC_Center_of_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CdC (Center of Cost)</label>
    <type>Checkbox</type>
</CustomField>