force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Cessation_Residue_Management__c.field-meta.xml
<CustomField>
    <fullName>IT_Cessation_Residue_Management__c</fullName>
    <label>Cessation Residue Management</label>
    <type>TextArea</type>
</CustomField>