force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_CIG__c.field-meta.xml
<CustomField>
    <fullName>IT_CIG__c</fullName>
    <formula>IT_Financial_Center__r.IT_CIG__c</formula>
    <label>CIG</label>
    <type>Text</type>
</CustomField>