force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Circuit__c.field-meta.xml
<CustomField>
    <fullName>IT_Circuit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circuit</label>
    <referenceTo>IT_Circuit__c</referenceTo>
    <relationshipLabel>Welfare Projects</relationshipLabel>
    <relationshipName>Welfare_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>