force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Circuit_Text__c.field-meta.xml
<CustomField>
    <fullName>IT_Circuit_Text__c</fullName>
    <label>Circuit</label>
    <length>6</length>
    <type>Text</type>
</CustomField>