force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Client_Administrative_Training__c.field-meta.xml
<CustomField>
    <fullName>IT_Client_Administrative_Training__c</fullName>
    <label>Client&#39;s Administrative Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>