force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Cluster_Welfare__c.field-meta.xml
<CustomField>
    <fullName>IT_Cluster_Welfare__c</fullName>
    <formula>IF( 
OR(
IT_Beneficiaries_Number__c = null,
AND( 
IT_Beneficiaries_Number__c &gt;= 0, 
IT_Beneficiaries_Number__c &lt;= 30 
)), 
&quot;D&quot;, 
IF( 
AND( 
IT_Beneficiaries_Number__c &gt;= 31, 
IT_Beneficiaries_Number__c &lt;= 60 
), 
&quot;C&quot;, 
IF( 
AND( 
IT_Beneficiaries_Number__c &gt;= 61, 
IT_Beneficiaries_Number__c &lt;= 120 
), 
&quot;B&quot;, 
IF( 
AND( 
IT_Beneficiaries_Number__c &gt;= 121, 
IT_Beneficiaries_Number__c &lt;= 350 
), 
&quot;A1&quot;, 
IF( 
AND( 
IT_Beneficiaries_Number__c &gt;= 351, 
IT_Beneficiaries_Number__c &lt;= 1000 
), 
&quot;A2&quot;, 
IF( 
AND( 
IT_Beneficiaries_Number__c &gt;= 1001, 
IT_Beneficiaries_Number__c &lt;= 4000 
), 
&quot;SA1&quot;, 
&quot;SA2&quot; 
) 
) 
) 
) 
) 
)</formula>
    <label>Cluster Welfare</label>
    <type>Text</type>
</CustomField>