force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Communication_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Communication_Plan_Description__c</fullName>
    <label>Communication Plan Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>