force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Complexity_Index__c.field-meta.xml
<CustomField>
    <fullName>IT_Complexity_Index__c</fullName>
    <label>Complexity Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>