force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Contact1__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Welfare Project (Contact)</relationshipLabel>
    <relationshipName>Welfare_Project</relationshipName>
    <type>Lookup</type>
</CustomField>