force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Welfare Projects</relationshipLabel>
    <relationshipName>Welfare_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>