force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Contract__c.field-meta.xml
<CustomField>
    <fullName>IT_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract</label>
    <type>Checkbox</type>
</CustomField>