force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Created_Task__c.field-meta.xml
<CustomField>
    <fullName>IT_Created_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Task</label>
    <type>Checkbox</type>
</CustomField>