force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Credentials__c.field-meta.xml
<CustomField>
    <fullName>IT_Credentials__c</fullName>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credentials vs Beneficiaries (only for Portale Titolari - not for new portal)</fullName>
                <label>Credentials vs Beneficiaries</label>
            </value>
            <value>
                <fullName>Marsh client (send credentials base-client to Marsh)</fullName>
                <label>Marsh client</label>
            </value>
            <value>
                <fullName>Credentials vs Beneficiaries and Marsh Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>