force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Current_Welfare_feeling__c.field-meta.xml
<CustomField>
    <fullName>IT_Current_Welfare_feeling__c</fullName>
    <label>Current Welfare feeling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>