force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Days_communication_method__c.field-meta.xml
<CustomField>
    <fullName>IT_Days_communication_method__c</fullName>
    <inlineHelpText>Indicare se la partecipazione è obbligatoria o facoltativa, come viene reso noto l’incontro ai dipendenti</inlineHelpText>
    <label>Days communication method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>