force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Days_Customer_Training__c.field-meta.xml
<CustomField>
    <fullName>IT_Days_Customer_Training__c</fullName>
    <label>Days Customer Training</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>