force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Days_of_meeting_with_Syndacate__c.field-meta.xml
<CustomField>
    <fullName>IT_Days_of_meeting_with_Syndacate__c</fullName>
    <label>Days of meeting with Syndacate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>