force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_DEM__c.field-meta.xml
<CustomField>
    <fullName>IT_DEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEM</label>
    <type>Checkbox</type>
</CustomField>