force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Denomination_and_message__c.field-meta.xml
<CustomField>
    <fullName>IT_Denomination_and_message__c</fullName>
    <inlineHelpText>Indicare i messaggi chiave da veicolare concordati con il cliente, se taglio più o meno pratico, agenda di massima</inlineHelpText>
    <label>Denomination and message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>