force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Digitalization_Level__c.field-meta.xml
<CustomField>
    <fullName>IT_Digitalization_Level__c</fullName>
    <label>Digitalization Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>