force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Duration__c.field-meta.xml
<CustomField>
    <fullName>IT_Duration__c</fullName>
    <label>Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>