force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Email_Credentials__c.field-meta.xml
<CustomField>
    <fullName>IT_Email_Credentials__c</fullName>
    <label>Email Credentials</label>
    <type>Email</type>
</CustomField>