force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Email_send_payroll__c.field-meta.xml
<CustomField>
    <fullName>IT_Email_send_payroll__c</fullName>
    <label>Email Send Payroll</label>
    <type>Email</type>
</CustomField>