force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Emotional_Video_Benefits__c.field-meta.xml
<CustomField>
    <fullName>IT_Emotional_Video_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emotional Video and/or Benefits</label>
    <type>Checkbox</type>
</CustomField>