force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_End_Plan_Residue_Management__c.field-meta.xml
<CustomField>
    <fullName>IT_End_Plan_Residue_Management__c</fullName>
    <label>End_Plan Residue Management</label>
    <type>TextArea</type>
</CustomField>