force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Extra_UE__c.field-meta.xml
<CustomField>
    <fullName>IT_Extra_UE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extra UE</label>
    <type>Checkbox</type>
</CustomField>