force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Fee_Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>IT_Fee_Parent_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Parent Group</label>
    <type>Checkbox</type>
</CustomField>