force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Financial_Sources__c.field-meta.xml
<CustomField>
    <fullName>IT_Financial_Sources__c</fullName>
    <inlineHelpText>Inserire le fonti di finanziamento</inlineHelpText>
    <label>Financial Sources</label>
    <type>TextArea</type>
</CustomField>