force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Go_Live_Project_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Go_Live_Project_Date__c</fullName>
    <label>Go Live Project Date</label>
    <type>Date</type>
</CustomField>