force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Graphic_Customization_Form__c.field-meta.xml
<CustomField>
    <fullName>IT_Graphic_Customization_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graphic Customization Form</label>
    <type>Checkbox</type>
</CustomField>