force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Graphic_Personalization__c.field-meta.xml
<CustomField>
    <fullName>IT_Graphic_Personalization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Guardare negli Allegati</inlineHelpText>
    <label>Graphic Personalization</label>
    <type>Checkbox</type>
</CustomField>