force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Health_Policy_in_being__c.field-meta.xml
<CustomField>
    <fullName>IT_Health_Policy_in_being__c</fullName>
    <inlineHelpText>Indicare se esistono già delle polizze sanitarie in azienda, quanto sono apprezzate e utilizzate, quali sono le aree sanitarie maggiormente scoperte</inlineHelpText>
    <label>Health Policy in being</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>