force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_IC_Referent_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>IT_IC_Referent_Multiplier__c</fullName>
    <formula>IF( 
TEXT(IT_Complexity_Index__c) = &quot;1&quot;, 0.8, 
IF( 
TEXT(IT_Complexity_Index__c)= &quot;2&quot;, 0.9, 
IF( 
TEXT(IT_Complexity_Index__c)= &quot;3&quot;, 1, 
IF( 
TEXT(IT_Complexity_Index__c)= &quot;4&quot;, 1.25,1.4 
) 
) 
) 
)</formula>
    <label>IC Referent Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>