force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Insurance_fund_registered_Population__c.field-meta.xml
<CustomField>
    <fullName>IT_Insurance_fund_registered_Population__c</fullName>
    <label>% Insurance fund registered Population</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>