force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Involved_locations__c.field-meta.xml
<CustomField>
    <fullName>IT_Involved_locations__c</fullName>
    <label>Involved locations</label>
    <type>TextArea</type>
</CustomField>