force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Involved_Society__c.field-meta.xml
<CustomField>
    <fullName>IT_Involved_Society__c</fullName>
    <label>Involved Society</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>