force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Logo__c.field-meta.xml
<CustomField>
    <fullName>IT_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logo</label>
    <type>Checkbox</type>
</CustomField>