force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Macro_Benefit__c.field-meta.xml
<CustomField>
    <fullName>IT_Macro_Benefit__c</fullName>
    <label>Macro Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Ticket Compliments</fullName>
            </value>
            <value>
                <fullName>Ticket Welfare</fullName>
            </value>
            <value>
                <fullName>Ticket Transport</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>