force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Max_Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Max_Plan_End_Date__c</fullName>
    <label>Max Plan End Date</label>
    <summarizedField>IT_Plan__c.IT_Plan_End_Date__c</summarizedField>
    <summaryForeignKey>IT_Plan__c.IT_Welfare_Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>