force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Meeting_room_organisation__c.field-meta.xml
<CustomField>
    <fullName>IT_Meeting_room_organisation__c</fullName>
    <label>Meeting room organisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>