force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Membership_Choice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Membership_Choice_Start_Date__c</fullName>
    <label>Membership Choice Start Date</label>
    <type>Date</type>
</CustomField>