force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Min_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Min_Plan_Start_Date__c</fullName>
    <label>Min Plan Start Date</label>
    <summarizedField>IT_Plan__c.IT_Plan_Start_Date__c</summarizedField>
    <summaryForeignKey>IT_Plan__c.IT_Welfare_Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>