force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_N_Months_Post_Start_Phase__c.field-meta.xml
<CustomField>
    <fullName>IT_N_Months_Post_Start_Phase__c</fullName>
    <formula>IF (( 
 IT_Max_Plan_End_Date__c  -  IT_Min_Plan_Start_Date__c  )/365 *12 &lt; 1, 1, 
(IT_Max_Plan_End_Date__c - IT_Min_Plan_Start_Date__c )/365 *12)</formula>
    <label>N. Months Post Start Phase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>