force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>IT_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>