force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Number_of_Plans__c.field-meta.xml
<CustomField>
    <fullName>IT_Number_of_Plans__c</fullName>
    <label>Number of Plans</label>
    <summarizedField>IT_Plan__c.IT_Number_of_Founding_Sources__c</summarizedField>
    <summaryForeignKey>IT_Plan__c.IT_Welfare_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>