force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Number_of_Plans_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>IT_Number_of_Plans_Multiplier__c</fullName>
    <formula>IF ( 
 IT_Number_of_Plans__c = 1, 1, 
IF ( 
 IT_Number_of_Plans__c = 2, 1.05, 
IF ( 
 IT_Number_of_Plans__c = 3, 1.1, 
IF ( 
 IT_Number_of_Plans__c = 4, 1.2, 1.35 ))))</formula>
    <label>Number of Plans Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>