force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Old_experience_feedback__c.field-meta.xml
<CustomField>
    <fullName>IT_Old_experience_feedback__c</fullName>
    <label>Old experience feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>