force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Other__c.field-meta.xml
<CustomField>
    <fullName>IT_Other__c</fullName>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>