force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Payroll_for_Levels__c.field-meta.xml
<CustomField>
    <fullName>IT_Payroll_for_Levels__c</fullName>
    <label>Payroll for Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>