force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Payroll_Personalization__c.field-meta.xml
<CustomField>
    <fullName>IT_Payroll_Personalization__c</fullName>
    <label>Payroll Personalization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matricola Column</fullName>
            </value>
            <value>
                <fullName>Benefit Codes (provide codes)</fullName>
            </value>
            <value>
                <fullName>Custom Develop (DSP)</fullName>
            </value>
            <value>
                <fullName>Plan name</fullName>
            </value>
            <value>
                <fullName>Cessato no row</fullName>
            </value>
            <value>
                <fullName>Sources</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>