force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Pdf_Html_Body__c.field-meta.xml
<CustomField>
    <fullName>IT_Pdf_Html_Body__c</fullName>
    <label>Pdf Html Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>