force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Plan_Start_Date__c</fullName>
    <label>Plan Start Date</label>
    <type>Date</type>
</CustomField>