force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Platform_Choice__c.field-meta.xml
<CustomField>
    <fullName>IT_Platform_Choice__c</fullName>
    <label>Platform Choice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>