force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_PO_List__c.field-meta.xml
<CustomField>
    <fullName>IT_PO_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO List</label>
    <type>Checkbox</type>
</CustomField>