force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_PO_ODA__c.field-meta.xml
<CustomField>
    <fullName>IT_PO_ODA__c</fullName>
    <label>PO/ODA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No PO</fullName>
                <default>true</default>
                <label>No PO</label>
            </value>
            <value>
                <fullName>Opened PO</fullName>
            </value>
            <value>
                <fullName>Prefattura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>