force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Pondered_Pre_Start_Weight__c.field-meta.xml
<CustomField>
    <fullName>IT_Pondered_Pre_Start_Weight__c</fullName>
    <formula>IT_Pre_Start_Weight__c  *  IT_IC_Referent_Multiplier__c  *  IT_Number_of_Plans_Multiplier__c</formula>
    <label>Pondered Pre Start Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>