force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Population_that_uses_public_transport__c.field-meta.xml
<CustomField>
    <fullName>IT_Population_that_uses_public_transport__c</fullName>
    <label>% Population that uses public transport</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>