force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Population_with_children__c.field-meta.xml
<CustomField>
    <fullName>IT_Population_with_children__c</fullName>
    <label>% Population with children</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>